# dwarf-with-friends

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DWF Setup.cmd  Dwarf With Friends Dev.cmd  Dwarf With Friends.cmd  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  TROUBLESHOOTING.md  UPSTREAM.md  dwf.lua
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good-first-blind-spot.yml  good-first-browser-dependency.yml  good-first-installer-diagnostic.yml  good-first-public-adr.yml  good-first-route-policy.yml
.github/workflows/: test-harness.yml  windows-native-build.yml
docs/: ARCHITECTURE.md  BROWSER-DEPENDENCIES.md  BUILD.md  CONFIG.md  DEVELOPMENT.md  DF-ACCESS.md  INSTALL.md  MANUAL-INSTALL.md  MAP.md  NAMING.md  PROTOCOL-V1.md  RELEASE-NOTES-v1.0.0-beta.1.md  RELEASE-NOTES-v1.0.0-beta.2.md  RELEASE-NOTES-v1.0.0-beta.3.md  REPORTING-BUGS.md
docs/reference/: flight-recorder-qualification.md  fogparams.json
host/: README.md  bake_sprites.mjs  download-manifest.json  fetchers.mjs  host_panel.mjs  hostlib.mjs  install.mjs  panel.css  panel.html  panel.js  pnglite.mjs  setup.html  setup.js  setup.mjs  sprite_recipe.json
lua/: dwf.parts.json
lua/parts/: 00-core.lua  10-placement-and-management.lua  20-burial.lua  30-workshops-and-orders.lua  40-console.lua  50-hostwrites.lua
scripts/: README.md  dwf-spawn-shops.lua
scripts/gui/: dwf.lua
src/: README.md  announce_taxonomy.gen.h  announcements.cpp  announcements.h  api_response.h  api_result.h  art_desc.cpp  art_desc.h  attribution.cpp  attribution.h  auth.cpp  auth.h  bake_sweep.cpp  bake_sweep.h  building_zone.cpp  building_zone.h  burrows_panel.cpp  burrows_panel.h  camera.h  chat.cpp  chat.h  client_state.cpp  client_state.h  console_policy.h  console_routes.cpp  console_routes.h  curses_palette.cpp  curses_palette.h  diagnostics.cpp  diagnostics.h  diplo.cpp  diplo.h  dwf.cpp  flight_recorder.cpp  flight_recorder.h  flight_recorder_v3.cpp  flight_recorder_v3.h  fort_admin.cpp  fort_admin.h  fort_stock.h  (+111 more)
tools/: OPEN-TEXTURE-LAB.cmd  README.md  loadtest.mjs  predeploy-gate.mjs  stub-server.mjs  texture-lab-server.mjs
tools/architecture/: browser-scripts.json  browser_dependency_inventory.mjs  df-access-policy.json  df_access_inventory.mjs
tools/demo/: README.md  cdp.mjs  demo.mjs  scenes.mjs
tools/harness/: .gitignore  ACCEPTANCE-TEMPLATE.md  README.md  TEST-MAP.md  analytics_fixture_test.mjs  announcement_parity_test.mjs  atlas-test.html  attribution_fixture_test.mjs  audio_client_test.mjs  audio_map_fixture_test.mjs  audit_live_enum.lua  audit_textures.py  auto_load.sh  automine_tint_test.mjs  autosave_interval_aux_test.mjs  b106_stair_range_test.mjs  b108_claimed_designation_blink_test.mjs  b109_remove_slope_test.mjs  b114_place_candidates_test.mjs  b122_b124_gather_job_validation_test.mjs  b123_growth_item_name_test.mjs  b126_gather_shrub_rect_test.mjs  b127_priority_wall_glyph_test.mjs  b133_desig_range_test.mjs  b151_parity_test.mjs  b166_barracks_test.mjs  b170_flow_hover_test.mjs  b174_wsrebuild_client_test.mjs  b180_b191_wirelabels_test.mjs  b198_zone_border_test.mjs  b204_black_glyphs_test.mjs  b211_wt27_clientview_test.mjs  b213_savetrigger_test.mjs  b217_zoneparity2_test.mjs  b221_workshopstall_cache_test.mjs  b221_workshopstall_profile.mjs  b222_status_serializer_parity_test.mjs  b227_justice_ui_test.mjs  b228_missions_test.mjs  b229_places_depth_test.mjs  (+348 more)
tools/lib/: README.md  dfroot.mjs  dfroot.py  dfroot.sh  mdutil.mjs
tools/lua/: build_dwf_lua.mjs
tools/protocol/: v1-registry.json
tools/release/: build_receipt.mjs  build_zip.mjs  launch_preflight.mjs  test-manifest.json
tools/rename/: w7-rename.sh  w7-sub.pl
tools/repro/: README.md  cage_diag.lua  save-spam.mjs  unit-window.mjs  world-unload.mjs
tools/security/: route-policy.json  route_inventory.mjs
tools/ws2/: HOWTO-mapdump.md  HOWTO.md  README.md  bake_dwarf.py  bake_unit.py  (+19 more)
web/: README.md  building_map.json  creatures_map.json  flow_map.json  grass_colors.json  index.html  interface_map.json  item_map.json  material_map.json  overlay_map.json  plant_map.json  portraits_map.json  shadow_cell_map.json  spatter_map.json  texture-lab.html  tiles.html  tiletype_token_map.json  tree_map.json
(+165 files in other folders)
